src/test/deca/codegen/valid/inst_expr_empty.deca
// Test de context, instruction est vide

{
    int x = 5;
    ;
    print(x);
}